crates/general/fixtures/invalid/record_field_colon.zt
-- Value records use `=`, not `:`, for fields.

{
  bad : 1;
}
